<resources>
    <string name="app_name">Remember Me</string>
    <string name="app_slogan">Save your\nbest memories.</string>
    <string name="app_slogan_single_line">Save your best memories.</string>
    <string name="app_credits">Developed by Gabriel Leite</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>