<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.gabriel.rememberme.ui.auth.viewmodel.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginActivity">


        <TextView
            android:id="@+id/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/app_name"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:fontFamily="@font/roboto_bold"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dots_upper" />

        <TextView
            android:id="@+id/app_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/app_slogan"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/app_name" />

        <LinearLayout
            android:id="@+id/dots_upper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:gravity="center|end"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/dot"
                android:backgroundTint="@color/colorPrimaryLighter"
                android:elevation="3dp"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/dot"
                android:backgroundTint="@color/colorPrimaryLight"
                android:elevation="3dp"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/dot"
                android:backgroundTint="@color/colorPrimary"
                android:elevation="3dp"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/dot"
                android:backgroundTint="@color/colorPrimaryDark"
                android:elevation="3dp"
                android:orientation="horizontal" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/dots_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/dot"
                android:backgroundTint="@color/colorPrimaryDark"
                android:elevation="3dp"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/dot"
                android:backgroundTint="@color/colorPrimary"
                android:elevation="3dp"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/dot"
                android:backgroundTint="@color/colorPrimaryLight"
                android:elevation="3dp"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/dot"
                android:backgroundTint="@color/colorPrimaryLighter"
                android:elevation="3dp"
                android:orientation="horizontal" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/login_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="8dp"
            app:cardElevation="24dp"
            app:cardMaxElevation="24dp"
            app:layout_constraintBottom_toTopOf="@+id/dots_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_slogan">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:id="@+id/user_icon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_user" />

                    <View
                        android:id="@+id/divider_1"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="@+id/email_input"
                        app:layout_constraintStart_toStartOf="@+id/user_icon"
                        app:layout_constraintTop_toBottomOf="@+id/user_icon" />

                    <EditText
                        android:id="@+id/email_input"
                        style="@android:style/Widget.EditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/roboto_light"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:text="@={viewmodel.email}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimaryLight"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toBottomOf="@+id/divider_1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/user_icon"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:id="@+id/password_icon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_password" />

                    <View
                        android:id="@+id/divider_2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="2dp"
                        android:background="@color/colorPrimaryLight"
                        app:layout_constraintEnd_toEndOf="@+id/password_input"
                        app:layout_constraintStart_toStartOf="@+id/password_icon"
                        app:layout_constraintTop_toBottomOf="@+id/password_icon" />

                    <EditText
                        android:id="@+id/password_input"
                        style="@android:style/Widget.EditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/roboto_light"
                        android:inputType="textPassword"
                        android:text="@={viewmodel.password}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:hint="@string/password"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimaryLight"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toBottomOf="@+id/divider_2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/password_icon"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp">

                    <Button
                        android:id="@+id/sign_up_button"
                        style="@style/ButtonShape"
                        android:onClick="@{viewmodel::goToSignUp}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:elevation="3dp"
                        android:fontFamily="@font/roboto_light"
                        android:includeFontPadding="false"
                        android:text="@string/sign_up"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/divider_3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/divider_3"
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:background="@color/colorPrimaryLight"
                        app:layout_constraintBottom_toBottomOf="@+id/sign_up_button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/sign_up_button" />

                    <Button
                        android:id="@+id/sign_in_button"
                        android:onClick="@{() -> viewmodel.login()}"
                        style="@style/ButtonShape"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:elevation="3dp"
                        android:fontFamily="@font/roboto_light"
                        android:includeFontPadding="false"
                        android:text="@string/sign_in"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/divider_3"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/app_slogan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/app_name" />

        <TextView
            android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/app_credits"
            android:textColor="@color/colorPrimaryLighter"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/dots_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_container" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/dots_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dots_bottom"
            app:layout_constraintTop_toTopOf="@+id/dots_bottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>